--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.5",
+    "dayjs": "^1.11.13",
     "kaplay": "^3001.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
