--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/css": "^11.13.5",
     "dayjs": "^1.11.13",
+    "fajarma-package": "^1.0.2",
+    "fajarma-react-lib": "^1.0.0",
     "kaplay": "^3001.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
