--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/css": "^11.13.5",
     "dayjs": "^1.11.13",
     "fajarma-package": "^1.0.2",
     "fajarma-react-lib": "^1.0.0",
     "kaplay": "^3001.0.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
