--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "kaplay": "^3001.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "sass": "^1.89.2",
     "zustand": "^5.0.6"
   },
