--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.13",
     "fajarma-package": "^1.1.0",
     "fajarma-react-lib": "^1.2.4",
+    "firebase": "^12.2.1",
     "kaplay": "^3001.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
