--- a/.github/workflows/githubio.yml
+++ b/.github/workflows/githubio.yml
@@ -35,15 +35,17 @@ jobs:
         with:
           bun-version: latest
       - name: Add Environment Variables
-        env:
-          VITE_FIRESTORE_API_KEY: ${{ secrets.VITE_FIRESTORE_API_KEY }}
-          VITE_FIRESTORE_AUTH_DOMAIN: ${{ secrets.VITE_FIRESTORE_AUTH_DOMAIN }}
-          VITE_FIRESTORE_PROJECT_ID: ${{ secrets.VITE_FIRESTORE_PROJECT_ID }}
-          VITE_FIRESTORE_STORAGE_BUCKET: ${{ secrets.VITE_FIRESTORE_STORAGE_BUCKET }}
-          VITE_FIRESTORE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIRESTORE_MESSAGING_SENDER_ID }}
-          VITE_FIRESTORE_APP_ID: ${{ secrets.VITE_FIRESTORE_APP_ID }}
-          VITE_FIRESTORE_MEASUREMENT_ID: ${{ secrets.VITE_FIRESTORE_MEASUREMENT_ID }}
-        run: echo "Environment variables configured."
+        run: |
+          touch .env
+          echo VITE_FIRESTORE_API_KEY=${{ secrets.VITE_FIRESTORE_API_KEY }} >> .env
+          echo VITE_FIRESTORE_AUTH_DOMAIN=${{ secrets.VITE_FIRESTORE_AUTH_DOMAIN }} >> .env
+          echo VITE_FIRESTORE_PROJECT_ID=${{ secrets.VITE_FIRESTORE_PROJECT_ID }} >> .env
+          echo VITE_FIRESTORE_STORAGE_BUCKET=${{ secrets.VITE_FIRESTORE_STORAGE_BUCKET }} >> .env
+          echo VITE_FIRESTORE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIRESTORE_MESSAGING_SENDER_ID }} >> .env
+          echo VITE_FIRESTORE_APP_ID=${{ secrets.VITE_FIRESTORE_APP_ID }} >> .env
+          echo VITE_FIRESTORE_MEASUREMENT_ID=${{ secrets.VITE_FIRESTORE_MEASUREMENT_ID }} >> .env
+          cat .env
+          echo "Environment variables configured."
       - name: Install dependencies
         run: bun install --frozen-lockfile
       - name: Build
